--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@ img.trophy-icon {
     <span>Settings</span>
   </a>
   
-  <a id="profile-button" class="tab-link" onclick="redirectToProfile()">
-    <img src="profile.png" alt="Profile" class="icon">
-    <span>Profile</span>
-  </a>
-</nav>
+  <a id="profile-button" class="tab-link" onclick="window.location.href='profile.html';">
+  <img src="profile.png" alt="Profile" class="icon">
+  <span>Profile</span>
+</a>
+
 
 
   <div class="content">
