--- a/today.html
+++ b/today.html
@@ -31,22 +31,7 @@
       gap: 1rem;
     }
 
-    .food-list {
-      margin-top: 20px;
-    }
-
-    .food-item {
-      padding: 10px;
-      background-color: #f0f0f0;
-      margin: 5px 0;
-      cursor: pointer;
-    }
-
-    .food-item:hover {
-      background-color: #e0e0e0;
-    }
-
-    #nutritionChart, #caloriesChart {
+    #stepsChart, #waterSleepChart {
       width: 400px;
       height: 400px;
     }
@@ -94,33 +79,54 @@
 
   <div class="content">
     <header>
-      <h1>Log Your Food and Fitness</h1>
+      <h1>Log Your Sleep, Steps, and Water</h1>
     </header>
     <main>
-      <!-- Food Search Section -->
+      <!-- Log Fitness Data Section -->
       <section>
-        <h2>Search for Food</h2>
-        <input type="text" id="foodSearch" placeholder="Search for food..." oninput="searchFood()">
-        <div id="foodList" class="food-list">
-          <!-- Food items will appear here -->
+        <h2>Log Your Fitness Data</h2>
+        <div class="inputs">
+          <div>
+            <label for="steps">Steps</label>
+            <input id="steps" type="number">
+          </div>
+          <div>
+            <label for="water">Water Intake (L)</label>
+            <input id="water" type="number" step="0.1">
+          </div>
+          <div>
+            <label for="sleep">Sleep (Hours)</label>
+            <input id="sleep" type="number" step="0.1">
+          </div>
         </div>
+        <button id="submit">Submit</button>
       </section>
 
-      <!-- Servings Input and Submit Button -->
-      <section id="foodDetailsSection" style="display: none;">
-        <h2>Food Details</h2>
-        <div>
-          <label for="servings">Servings</label>
-          <input type="number" id="servings" min="1" value="1" placeholder="Number of servings">
-        </div>
-        <button id="addFood" onclick="addFoodToLog()">Add Food</button>
+      <!-- Fitness Logs Table -->
+      <section>
+        <h2>Fitness Logs</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>Date</th>
+              <th>Steps</th>
+              <th>Water Intake (L)</th>
+              <th>Sleep (Hours)</th>
+              <th>Edit</th>
+              <th>Delete</th>
+            </tr>
+          </thead>
+          <tbody id="logsSection">
+            <!-- Logs will be dynamically injected here -->
+          </tbody>
+        </table>
       </section>
 
       <!-- Charts Section -->
       <section>
         <h2>Charts</h2>
-        <canvas id="nutritionChart"></canvas> <!-- 3D Pie Chart -->
-        <canvas id="caloriesChart"></canvas> <!-- Calories Bar Chart -->
+        <canvas id="stepsChart"></canvas> <!-- Steps Chart -->
+        <canvas id="waterSleepChart"></canvas> <!-- Water & Sleep Chart -->
       </section>
     </main>
   </div>
@@ -144,112 +150,77 @@
     });
   </script>
 
-  <!-- JavaScript to handle food search, API calls, and chart updates -->
+  <!-- JavaScript to handle data logging and chart updates -->
   <script>
-    const apiKey = 'b86ae26b7f844ead91ce96df1eb8df0c'; // Replace with your actual API key
-    let selectedFood = null;  // Store selected food details
+    document.getElementById('submit').addEventListener('click', () => {
+      const steps = document.getElementById('steps').value;
+      const water = document.getElementById('water').value;
+      const sleep = document.getElementById('sleep').value;
 
-    async function searchFood() {
-      const query = document.getElementById('foodSearch').value;
-      const url = `https://api.spoonacular.com/food/ingredients/search?query=${query}&number=5&apiKey=${apiKey}`;
+      // Log data
+      const log = {
+        date: new Date().toLocaleDateString(),
+        steps,
+        water,
+        sleep
+      };
 
-      try {
-        const response = await fetch(url);
-        const data = await response.json();
-        
-        if (data.results && data.results.length > 0) {
-          const foodList = document.getElementById('foodList');
-          foodList.innerHTML = '';  // Clear previous results
+      // Insert log into table
+      const tableBody = document.getElementById('logsSection');
+      const row = tableBody.insertRow();
+      row.innerHTML = `
+        <td>${log.date}</td>
+        <td>${log.steps}</td>
+        <td>${log.water}</td>
+        <td>${log.sleep}</td>
+        <td><button onclick="editRow(this)">Edit</button></td>
+        <td><button onclick="deleteRow(this)">Delete</button></td>
+      `;
 
-          data.results.forEach((food, index) => {
-            const foodItem = document.createElement('div');
-            foodItem.className = 'food-item';
-            foodItem.innerText = food.name;
-            foodItem.onclick = () => selectFood(food);
-            foodList.appendChild(foodItem);
-          });
-        }
-      } catch (error) {
-        console.error('Error searching for food:', error);
-      }
+      // Update charts with new data
+      updateCharts(steps, water, sleep);
+    });
+
+    function editRow(button) {
+      const row = button.closest('tr');
+      const cells = row.getElementsByTagName('td');
+      document.getElementById('steps').value = cells[1].innerText;
+      document.getElementById('water').value = cells[2].innerText;
+      document.getElementById('sleep').value = cells[3].innerText;
+      row.remove();
     }
 
-    function selectFood(food) {
-      selectedFood = food;
-      document.getElementById('foodSearch').value = food.name;
-      document.getElementById('foodDetailsSection').style.display = 'block';
+    function deleteRow(button) {
+      const row = button.closest('tr');
+      row.remove();
     }
 
-    async function addFoodToLog() {
-      const servings = parseFloat(document.getElementById('servings').value);
-      
-      if (selectedFood && servings > 0) {
-        const foodData = await fetchFoodData(selectedFood.name);
-
-        // Log food data
-        const totalCalories = foodData.calories * servings;
-
-        // Update charts
-        updateCharts(totalCalories, foodData);
-
-        // Reset form
-        document.getElementById('foodSearch').value = '';
-        document.getElementById('servings').value = 1;
-        document.getElementById('foodDetailsSection').style.display = 'none';
-      }
-    }
-
-    async function fetchFoodData(foodItem) {
-      const url = `https://api.spoonacular.com/food/ingredients/search?query=${foodItem}&number=1&sort=calories&sortDirection=desc&apiKey=${apiKey}`;
-
-      try {
-        const response = await fetch(url);
-        const data = await response.json();
-
-        if (data.results && data.results.length > 0) {
-          const food = data.results[0];
-          return {
-            name: food.name,
-            calories: food.nutrition?.calories || 0,
-            protein: food.nutrition?.protein || 0,
-            carbs: food.nutrition?.carbs || 0,
-            fat: food.nutrition?.fat || 0
-          };
-        } else {
-          return { name: 'Food not found', calories: 0, protein: 0, carbs: 0, fat: 0 };
-        }
-      } catch (error) {
-        console.error('Error fetching food data:', error);
-        return { name: 'Error', calories: 0, protein: 0, carbs: 0, fat: 0 };
-      }
-    }
-
-    function updateCharts(calories, foodData) {
-      // Update Pie Chart (Nutritional Info)
-      const nutritionChart = new Chart(document.getElementById('nutritionChart'), {
-        type: 'pie',
+    function updateCharts(steps, water, sleep) {
+      // Update the Steps Chart
+      const stepsChart = new Chart(document.getElementById('stepsChart'), {
+        type: 'bar',
         data: {
-          labels: ['Protein', 'Carbs', 'Fat'],
+          labels: ['Steps'],
           datasets: [{
-            label: 'Nutritional Info',
-            data: [foodData.protein, foodData.carbs, foodData.fat],
-            backgroundColor: ['rgba(54, 162, 235, 0.2)', 'rgba(255, 159, 64, 0.2)', 'rgba(153, 102, 255, 0.2)'],
-            borderColor: ['rgba(54, 162, 235, 1)', 'rgba(255, 159, 64, 1)', 'rgba(153, 102, 255, 1)'],
+            label: 'Steps for Today',
+            data: [steps],
+            backgroundColor: ['rgba(75, 192, 192, 0.2)'],
+            borderColor: ['rgba(75, 192, 192, 1)'],
             borderWidth: 1
           }]
         }
       });
 
-      // Update Bar Chart (Calories)
-      const caloriesChart = new Chart(document.getElementById('caloriesChart'), {
+      // Update the Water & Sleep Chart
+      const waterSleepChart = new Chart(document.getElementById('waterSleepChart'), {
         type: 'bar',
         data: {
-          labels: ['Calories'],
+          labels: ['Water (L)', 'Sleep (Hours)'],
           datasets: [{
-            label: 'Calories Consumed',
-            data: [calories],
-            backgroundColor: ['rgba(75, 192, 192, 0.2)'],
-            borderColor: ['rgba(75, 192, 192, 1)'],
+            label: 'Water and Sleep for Today',
+            data: [water, sleep],
+            backgroundColor: ['rgba(153, 102, 255, 0.2)', 'rgba(255, 159, 64, 0.2)'],
+            borderColor: ['rgba(153, 102, 255, 1)', 'rgba(255, 159, 64, 1)'],
             borderWidth: 1
           }]
         }
